Подключен в проекте viewBinding для работы с элементами View. Добавлен абстрактный класс BaseFragment с базовыми методами работы с viewBinding. Реализована прямая и обратная навигация между стартовым окном и окном с детальной информацие о погоде: при нажатии на кнопку осуществляется прямой переход на окно с детальной информацией о погоде, а при нажатии или на кноку Домашняя страница, или на системную кнопку Back осуществляется возврат на домашнюю страницу. Если при нахождении на домашней странице нажать системную кнопку Back, то приложение закрывается. Если при нахождении на домашней странице нажать на кнопку Домашняя страница, то приложение остаётся на этом же окне.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PlaceWeatherMonitor</string>
+    <string name="home_page">Домашняя\nстраница</string>
+    <string name="deep_link">Пусто</string>
+    <string name="fragment_home_page_button_text">Переход на фрагмент\nс детальной информацией\nо погоде</string>
+    <string name="fragment_home_page_notification_text">Вы уже находитесь на Домашней странице</string>
 </resources>
