--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="deep_link">Пусто</string>
     <string name="fragment_home_page_button_text">Переход на фрагмент\nс детальной информацией\nо погоде</string>
     <string name="fragment_home_page_notification_text">Вы уже находитесь на Домашней странице</string>
+
+    <!-- ERRORS MESSAGES -->
+    <string name="error_permissions_geodata_text">Разрешения не доступ к геоданным не получены</string>
+    <string name="error_geolocation_needed_text">Пожалуйста, для работы приложения включите геолокацию.</string>
 </resources>
