Во фрагмент DetailWeatherFragment реализована передача информации о дате, за которую нужно отобразить детальную информацию о погоде. Во фрагмент DetailWeatherFragment добавлена ViewModel, позволяющая загружать детальную информацию  из базы данных по дате.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <!-- ERRORS MESSAGES -->
     <string name="error_permissions_geodata_text">Разрешения не доступ к геоданным не получены</string>
     <string name="error_geolocation_needed_text">Пожалуйста, для работы приложения включите геолокацию.</string>
+    <string name="error_get_data_not_for_current_window_text">ОШИБКА: Получены данные не для текущего окна.</string>
 </resources>
