Реализован вывод детальной информации о погоде в отдельном фрагменте на всём экране за выбранную дату на домашней странице при клике на соответствующий элемент списка.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="temperature_min_value_sample_text">23</string>
     <string name="temperature_max_value_sample_text">23</string>
     <string name="cloudy_percent_value_sample_text">23</string>
+    <string name="weather_detailed_data_text_sample_text">Детальная информация о погоде</string>
 </resources>
